@@ -17,3 +17,6 @@ use = egg:FakeApp#caps2
 method_to_call = lower
 next = normal
 
+[app:inv]
+use = egg:FakeApp#basic_app
+filter-with = egg:FakeApp#caps
